--- a/package.json
+++ b/package.json
@@ -10,32 +10,36 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
+  "dependencies": {
+    "date-fns": "^4.1.0",
+    "v-calendar": "^3.1.2"
+  },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.7.3",
+    "@antfu/eslint-config": "^3.9.1",
     "@iconify-json/fa6-brands": "^1.2.0",
-    "@iconify-json/ion": "^1.2.1",
+    "@iconify-json/heroicons": "^1.2.1",
     "@iconify-json/logos": "^1.2.2",
-    "@iconify-json/lucide": "^1.2.7",
+    "@iconify-json/lucide": "^1.2.15",
     "@iconify-json/solar": "^1.2.0",
     "@nuxt/content": "^2.12.1",
     "@nuxt/devtools": "^1.5.2",
-    "@nuxt/eslint": "^0.5.7",
-    "@nuxt/icon": "^1.5.4",
+    "@nuxt/eslint": "^0.7.0",
+    "@nuxt/icon": "^1.7.5",
     "@nuxt/image": "^1.8.1",
-    "@nuxtjs/fontaine": "^0.4.3",
+    "@nuxtjs/fontaine": "^0.4.4",
     "@nuxtjs/google-fonts": "^3.1.1",
     "@nuxtjs/seo": "2.0.0-rc.23",
     "@shuriken-ui/nuxt": "^3.6.1",
     "@stefanobartoletti/nuxt-social-share": "1.2.0",
     "@stylistic/eslint-plugin": "^2.9.0",
-    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
     "@vueuse/nuxt": "^11.1.0",
-    "eslint": "^9.12.0",
+    "eslint": "^9.15.0",
     "eslint-plugin-tailwindcss": "^3.13.1",
-    "eslint-plugin-vue": "^9.20.0",
-    "nuxt": "^3.13.2",
+    "eslint-plugin-vue": "^9.31.0",
+    "nuxt": "^3.14.159",
     "nuxt-og-image": "^3.0.4",
-    "nuxt-security": "2.0.0",
+    "nuxt-security": "2.1.1",
     "playwright": "^1.47.2",
     "typescript": "^5.6.2",
     "vue-tsc": "^2.1.6"
